--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 5px solid $color-highlight-base;
+    border-bottom: 1px solid contrast-lower($color-heading-base);
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -20,7 +20,7 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: contrast-lower($fg);
     }
 }
 
@@ -33,8 +33,8 @@
     }
 
     .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
+        color: contrast-low($fg);
+        line-height: $line-height-base;
 
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
@@ -46,8 +46,8 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        background-color: contrast-higher($bg);
+        border: 1px solid contrast-lower($color-heading-base);
         border-radius: 5px;
         text-align: right;
 
@@ -65,7 +65,7 @@
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: contrast-low($fg);
                 }
             }
         }
@@ -98,7 +98,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    border-top: 1px solid contrast-lower($color-heading-base);
     padding: $spacing-unit 0;
 }
 
@@ -115,7 +115,7 @@
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
+    color: contrast-lower($fg);
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
@@ -169,6 +169,7 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+    background-color: $bg
 }
 
 .page-heading {
@@ -185,8 +186,8 @@
 }
 
 .post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
+    font-size: $font-size-sm;
+    color: contrast-low($color-highlight-base);
 }
 
 .post-link {
