Add SASS for tags, and add tags
- List of tags displays for each design rule. Presently does not link to
  anything. We need to make a "tags" collection.

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@ $on-laptop:        800px;
         "variables",
         "normalize",
         "base",
+        "badge",
         "layout",
         "syntax-highlighting"
 ;
