--- a/_layouts/rule.html
+++ b/_layouts/rule.html
@@ -4,7 +4,13 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.snippet }}</h1>
+    <p class="post-meta">{{ page.uuid }}</p>
+    <blockquote><p>{{ page.snippet }}</p></blockquote>
+    <ul class="undercover">
+      {% for tag in page.tags %}
+      <li><a href="{{site.baseurl}}/tags/{{tag}}" class="undercover"><span class="badge">{{ tag }}</span></a></li>
+      {% endfor %}
+    </ul>
   </header>
 
   <div class="post-content" itemprop="articleBody">
