--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -108,6 +108,20 @@ li {
     }
 }
 
+ul.undercover {
+    margin-left: 0;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    > li {
+      display: inline-block;
+      margin-right: $spacing-unit / 4;
+    }
+    > li:last-child {
+      margin-right: 0;
+    }
+}
+
 
 
 /**
@@ -158,6 +172,20 @@ a {
 
     &:hover {
         text-decoration: $link-hover-decoration;
+    }
+}
+
+a.undercover {
+
+    color: inherit;
+    text-decoration: inherit;
+
+    &:visited {
+        color: inherit;
+    }
+
+    &:hover {
+        text-decoration: inherit;
     }
 }
 
