--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -77,3 +77,14 @@ $font-size-h3: 1.75rem !default;
 $font-size-h4: 1.5rem !default;
 $font-size-h5: 1.25rem !default;
 $font-size-h6: 1rem !default;
+
+/**
+ * Badges
+ */
+
+$badge-fg: $fg !default;
+$badge-bg: contrast-lower($color-highlight-base) !default;
+$badge-font-size: 90% !default;
+$badge-font-weight: $font-weight-normal !default;
+$badge-padding-x: .4em !default;
+$badge-padding-y: .25em !default;
