--- a/_layouts/rule.html
+++ b/_layouts/rule.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post">
 
   <header class="post-header">
     <p class="post-meta">{{ page.uuid }}</p>
@@ -13,7 +13,7 @@ layout: default
     </ul>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content">
     {{ content }}
   </div>
 
