--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post">
 
   <header class="post-header">
     <h1>{{ page.tagname }}</h1>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content">
     {% for rule in site.rules %}
       {% assign match = false %}
       {% for tag in rule.tags %}
