--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1>{{ page.tagname }}</h1>
+    <h1 class="post-title">{{ page.tagname }}</h1>
   </header>
 
   <div class="post-content">
@@ -19,7 +19,7 @@ layout: default
       {% if match %}
       <p class="post-meta"><a href="{{ site.baseurl | append: rule.url }}">{{ rule.uuid }}</a></p>
       <blockquote><p>{{ rule.snippet }}</p></blockquote>
-      <ul class="undercover">
+      <ul class="undercover inline">
         {% assign sorted_tags = rule.tags | sort %}
         {% for tag in sorted_tags %}
         <li><a href="{{ site.baseurl | append: "/tags/" | append: tag | append: "/" }}" class="undercover"><span class="badge">{{ tag }}</span></a></li>
