--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -109,17 +109,19 @@ li {
 }
 
 ul.undercover {
-    margin-left: 0;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-    > li {
-      display: inline-block;
-      margin-right: $spacing-unit / 4;
-    }
-    > li:last-child {
-      margin-right: 0;
-    }
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.inline {
+  > li {
+    display: inline-block;
+    margin-right: $spacing-unit / 4;
+  }
+  > li:last-child {
+    margin-right: 0;
+  }
 }
 
 
