--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -19,12 +19,7 @@ layout: default
       {% if match %}
       <p class="post-meta"><a href="{{ site.baseurl | append: rule.url }}">{{ rule.uuid }}</a></p>
       <blockquote><p>{{ rule.snippet }}</p></blockquote>
-      <ul class="undercover inline">
-        {% assign sorted_tags = rule.tags | sort %}
-        {% for tag in sorted_tags %}
-        <li><a href="{{ site.baseurl | append: "/tags/" | append: tag | append: "/" }}" class="undercover"><span class="badge">{{ tag }}</span></a></li>
-        {% endfor %}
-      </ul>
+      {% include tag-list-inline.html tags=rule.tags %}
       {% endif %}
     {% endfor %}
   </div>
