'ul.separator' CSS class
- For making lists of items separated by a small horizontal line.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -124,6 +124,21 @@ ul.inline {
   }
 }
 
+ul.separator {
+  > li {
+    padding-top: $spacing-unit;
+    padding-bottom: $spacing-unit;
+    border-bottom: 1px solid contrast-lower($color-heading-base);
+  }
+  > li:first-child {
+    padding-top: 0;
+  }
+  > li:last-child {
+    padding-bottom: 0;
+    border-bottom-style: none;
+  }
+}
+
 
 
 /**
