--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -8,20 +8,24 @@ layout: default
   </header>
 
   <div class="post-content">
-    {% for rule in site.rules %}
-      {% assign match = false %}
-      {% for tag in rule.tags %}
-        {% if tag == page.tagname %}
-          {% assign match = true %}
-          {% break %}
+    <ul class="undercover separator">
+      {% for rule in site.rules %}
+        {% assign match = false %}
+        {% for tag in rule.tags %}
+          {% if tag == page.tagname %}
+            {% assign match = true %}
+            {% break %}
+          {% endif %}
+        {% endfor %}
+        {% if match %}
+          <li>
+            <p class="post-meta"><a href="{{ site.baseurl | append: rule.url }}">{{ rule.uuid }}</a></p>
+            <blockquote><p>{{ rule.snippet }}</p></blockquote>
+            {% include tag-list-inline.html tags=rule.tags %}
+          </li>
         {% endif %}
       {% endfor %}
-      {% if match %}
-      <p class="post-meta"><a href="{{ site.baseurl | append: rule.url }}">{{ rule.uuid }}</a></p>
-      <blockquote><p>{{ rule.snippet }}</p></blockquote>
-      {% include tag-list-inline.html tags=rule.tags %}
-      {% endif %}
-    {% endfor %}
+    </ul>
   </div>
 
 </article>
