--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -206,6 +206,14 @@ a.undercover {
     }
 }
 
+a.broken {
+  color: $link-visited-color;
+  text-decoration: line-through;
+  &:hover {
+    text-decoration: line-through;
+  }
+}
+
 
 
 /**
@@ -305,4 +313,14 @@ pre {
             fill: contrast-low($fg);
         }
     }
+}
+
+
+
+/**
+ * Typography
+ */
+
+.tiny {
+  font-size: $font-size-sm;
 }
