Footer includes link to Github project
- Nobody cares about who I am, so I don't want a link to my Github
  profile. But if they're reading these design rules, they care about
  the project. It's more appropriate to have a link to the project.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,11 @@
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            {% if site.github_project %}
+              {% include icon-github-project.html username=site.github_username project=site.github_project %}
+            {% else %}
+              {% include icon-github.html username=site.github_username %}
+            {% endif %}
           </li>
           {% endif %}
 
