Static layout complete
- It looks pretty good, and does what we want.
- Now we have to modify the code sample layout to have no background for
  the code.

--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -9,6 +9,12 @@
 
       {% include header-static.html %}
 
+      <div class="page-content">
+        <div class="wrapper-static dynamic-container">
+          {{ content }}
+        </div>
+      </div>
+
       {% include footer-static.html %}
 
     </div>
