Finish 'code-sample.html' layout
- Code is no longer surrounded by a box.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -260,6 +260,26 @@ pre {
     }
 }
 
+.code-only {
+
+  > figure {
+
+    > pre {
+
+      border: medium none transparent;
+      background-color: transparent;
+      padding: 0;
+
+      > code {
+
+        border: medium none transparent;
+        background-color: transparent;
+        padding: 0;
+      }
+    }
+  }
+}
+
 
 
 /**
