--- a/_layouts/code-sample.html
+++ b/_layouts/code-sample.html
@@ -7,7 +7,7 @@ layout: static
     <h1 class="post-title">{{ page.language }}</h1>
   </header>
 
-  <div class="post-content">
+  <div class="post-content code-only">
     {{ content }}
   </div>
 
