--- a/_includes/footer-static.html
+++ b/_includes/footer-static.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 
-  <div class="wrapper-static">
+  <div class="wrapper-fixed">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
 
-    <div class="footer-col-wrapper-static">
+    <div class="footer-col-wrapper">
       <div class="footer-col-static footer-col-1-static">
         <ul class="social-media-list">
           {% if site.github_username %}
