--- a/_includes/header-static.html
+++ b/_includes/header-static.html
@@ -1,8 +1,8 @@
 <header class="site-header-static">
 
-  <div class="wrapper-static">
+  <div class="wrapper-fixed">
 
-    <a class="site-title-static" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav-static">
       <div>
