--- a/_layouts/static.html
+++ b/_layouts/static.html
@@ -10,7 +10,7 @@
       {% include header-static.html %}
 
       <div class="page-content">
-        <div class="wrapper-static dynamic-container">
+        <div class="wrapper-static">
           {{ content }}
         </div>
       </div>
