--- a/_layouts/code-sample.html
+++ b/_layouts/code-sample.html
@@ -5,6 +5,7 @@ layout: static
 
   <header class="post-header">
     <h1 class="post-title">{{ page.language }}</h1>
+    {% if page.filename %}<p class="post-meta">{{ page.filename }}</p>{% endif %}
   </header>
 
   <div class="post-content code-only">
