--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -9,63 +9,63 @@
       background: #eef;
     }
 
-    .c     { color: #85ffff; font-style: italic } // Comment
-    .err   { color: #a61717; background-color: #e3d2d2 } // Error
-    .k     { color: #87ffaf; font-weight: bold } // Keyword
-    .o     { color: #87ffaf } // Operator
-    .cm    { color: #85ffff; font-style: italic } // Comment.Multiline
+    .c     { color: #85ffff; font-style: italic; } // Comment
+    .err   { color: #a61717; background-color: #e3d2d2; } // Error
+    .k     { color: #87ffaf; font-weight: bold; } // Keyword
+    .o     { color: #87ffaf; } // Operator
+    .cm    { color: #85ffff; font-style: italic; } // Comment.Multiline
     .cp    { color: #ffff85; } // Comment.Preproc
-    .c1    { color: #85ffff; font-style: italic } // Comment.Single
-    .cs    { color: #ffff85; font-weight: bold; font-style: italic } // Comment.Special
-    .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-    .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
-    .ge    { font-style: italic } // Generic.Emph
-    .gr    { color: #a00 } // Generic.Error
-    .gh    { color: #ffff85 } // Generic.Heading
-    .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-    .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-    .go    { color: #888 } // Generic.Output
-    .gp    { color: #555 } // Generic.Prompt
-    .gs    { color: #87ffaf } // Generic.Strong
-    .gu    { color: #aaa } // Generic.Subheading
-    .gt    { color: #a00 } // Generic.Traceback
-    .kc    { color: #87ffaf } // Keyword.Constant
-    .kd    { color: #87ffaf } // Keyword.Declaration
-    .kp    { color: #87ffaf } // Keyword.Pseudo
-    .kr    { color: #87ffaf } // Keyword.Reserved
-    .kt    { color: #5fd7ff } // Keyword.Type
-    .m     { color: #ff85ff } // Literal.Number
-    .s     { color: #ff8585 } // Literal.String
-    .na    { color: #008080 } // Name.Attribute
-    .nb    { color: #0086B3 } // Name.Builtin
-    .nc    { color: #5fd7ff } // Name.Class
-    .no    { color: #008080 } // Name.Constant
-    .ni    { color: #800080 } // Name.Entity
-    .ne    { font-weight: bold } // Name.Exception
+    .c1    { color: #85ffff; font-style: italic; } // Comment.Single
+    .cs    { color: #ffff85; font-weight: bold; font-style: italic; } // Comment.Special
+    .gd    { color: #000; background-color: #fdd; } // Generic.Deleted
+    .gd .x { color: #000; background-color: #faa; } // Generic.Deleted.Specific
+    .ge    { font-style: italic; } // Generic.Emph
+    .gr    { color: #a00; } // Generic.Error
+    .gh    { color: #ffff85; } // Generic.Heading
+    .gi    { color: #000; background-color: #dfd; } // Generic.Inserted
+    .gi .x { color: #000; background-color: #afa; } // Generic.Inserted.Specific
+    .go    { color: #888; } // Generic.Output
+    .gp    { color: #555; } // Generic.Prompt
+    .gs    { color: #87ffaf; } // Generic.Strong
+    .gu    { color: #aaa; } // Generic.Subheading
+    .gt    { color: #a00; } // Generic.Traceback
+    .kc    { color: #87ffaf; } // Keyword.Constant
+    .kd    { color: #87ffaf; } // Keyword.Declaration
+    .kp    { color: #87ffaf; } // Keyword.Pseudo
+    .kr    { color: #87ffaf; } // Keyword.Reserved
+    .kt    { color: #5fd7ff; } // Keyword.Type
+    .m     { color: #ff85ff; } // Literal.Number
+    .s     { color: #ff8585; } // Literal.String
+    .na    { color: #008080; } // Name.Attribute
+    .nb    { color: #0086B3; } // Name.Builtin
+    .nc    { color: #5fd7ff; } // Name.Class
+    .no    { color: #008080; } // Name.Constant
+    .ni    { color: #800080; } // Name.Entity
+    .ne    { font-weight: bold; } // Name.Exception
     .nf    { } // Name.Function
-    .nn    { color: #ffce85 } // Name.Namespace
-    .nt    { color: #000080 } // Name.Tag
-    .nv    { color: #008080 } // Name.Variable
-    .ow    { color: #87ffaf } // Operator.Word
-    .w     { color: #bbb } // Text.Whitespace
-    .mf    { color: #ff85ff } // Literal.Number.Float
-    .mh    { color: #ff85ff } // Literal.Number.Hex
-    .mi    { color: #ff85ff } // Literal.Number.Integer
-    .mo    { color: #ff85ff } // Literal.Number.Oct
-    .sb    { color: #ff8585 } // Literal.String.Backtick
-    .sc    { color: #ff8585 } // Literal.String.Char
-    .sd    { color: #ff8585 } // Literal.String.Doc
-    .s2    { color: #ff8585 } // Literal.String.Double
-    .se    { color: #ff8585 } // Literal.String.Escape
-    .sh    { color: #ff8585 } // Literal.String.Heredoc
-    .si    { color: #ff8585 } // Literal.String.Interpol
-    .sx    { color: #ff8585 } // Literal.String.Other
-    .sr    { color: #009926 } // Literal.String.Regex
-    .s1    { color: #ff8585 } // Literal.String.Single
-    .ss    { color: #990073 } // Literal.String.Symbol
-    .bp    { color: #ffff85 } // Name.Builtin.Pseudo
-    .vc    { color: #008080 } // Name.Variable.Class
-    .vg    { color: #008080 } // Name.Variable.Global
-    .vi    { color: #008080 } // Name.Variable.Instance
-    .il    { color: #ff85ff } // Literal.Number.Integer.Long
+    .nn    { color: #ffce85; } // Name.Namespace
+    .nt    { color: #000080; } // Name.Tag
+    .nv    { color: #008080; } // Name.Variable
+    .ow    { color: #87ffaf; } // Operator.Word
+    .w     { color: #bbb; } // Text.Whitespace
+    .mf    { color: #ff85ff; } // Literal.Number.Float
+    .mh    { color: #ff85ff; } // Literal.Number.Hex
+    .mi    { color: #ff85ff; } // Literal.Number.Integer
+    .mo    { color: #ff85ff; } // Literal.Number.Oct
+    .sb    { color: #ff8585; } // Literal.String.Backtick
+    .sc    { color: #ff8585; } // Literal.String.Char
+    .sd    { color: #ff8585; } // Literal.String.Doc
+    .s2    { color: #ff8585; } // Literal.String.Double
+    .se    { color: #ff8585; } // Literal.String.Escape
+    .sh    { color: #ff8585; } // Literal.String.Heredoc
+    .si    { color: #ff8585; } // Literal.String.Interpol
+    .sx    { color: #ff8585; } // Literal.String.Other
+    .sr    { color: #009926; } // Literal.String.Regex
+    .s1    { color: #ff8585; } // Literal.String.Single
+    .ss    { color: #990073; } // Literal.String.Symbol
+    .bp    { color: #ffff85; } // Name.Builtin.Pseudo
+    .vc    { color: #008080; } // Name.Variable.Class
+    .vg    { color: #008080; } // Name.Variable.Global
+    .vi    { color: #008080; } // Name.Variable.Instance
+    .il    { color: #ff85ff; } // Literal.Number.Integer.Long
 }
