Code font is monospace
- It looks better to me.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -252,6 +252,8 @@ code {
 code {
     padding: 1px 5px;
     color: #aaa;
+    font-family: $font-family-monospace;
+    line-height: 0.67 * $line-height-base;
 }
 
 pre {
