Allow custom page description
- Using the `page.description` field, if present on the page.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% elsif page.snippet %}{{ page.snippet }}{% elsif page.tagname %}{{ page.tagname }} tag{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | newline_to_br | replace: '<br />', ' ' | strip_newlines | strip | truncate: 160 }}{% else %}{{ site.description | strip_newlines | strip }}{% endif %}">
+  <meta name="description" content="{% if page.description %}{{ page.description | strip_newlines }}{% elsif page.excerpt %}{{ page.excerpt | strip_html | newline_to_br | replace: '<br />', ' ' | strip_newlines | strip | truncate: 160 }}{% else %}{{ site.description | strip_newlines | strip }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
