--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -12,8 +12,9 @@ layout: default
       {% for rule in site.rules %}
         {% if rule.tags contains page.uuid %}
           <li>
-            <p class="post-meta"><a href="{{ site.baseurl | append: rule.url }}">{{ rule.uuid }}</a></p>
-            <blockquote><p>{{ rule.snippet }}</p></blockquote>
+            <a href="{{ site.baseurl | append: rule.url }}" class="undercover">
+              <blockquote><p>{{ rule.snippet }}</p></blockquote>
+            </a>
             {% include tag-list-inline.html tags=rule.tags %}
           </li>
         {% endif %}
