--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -145,32 +145,37 @@ ul.separator {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    color: $color-heading-base;
     font-family: $font-family-monospace;
     font-weight: $font-weight-normal;
 }
 
 h1 {
+  color: $color-heading-base;
   font-size: $font-size-h1;
 }
 
 h2 {
+  color: $color-heading-base;
   font-size: $font-size-h2;
 }
 
 h3 {
+  color: contrast-high($color-heading-base);
   font-size: $font-size-h3;
 }
 
 h4 {
+  color: contrast-high($color-heading-base);
   font-size: $font-size-h4;
 }
 
 h5 {
+  color: contrast-high($color-heading-base);
   font-size: $font-size-h5;
 }
 
 h6 {
+  color: contrast-high($color-heading-base);
   font-size: $font-size-h6;
 }
 
