"left" alignment CSS for table cells
- Since <th> has center alignment by default.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -419,6 +419,11 @@ div.table {
             text-align: center;
           }
 
+          &.left {
+
+            text-align: left;
+          }
+
           &.highlight1 {
 
             background-color: contrast-lower($color-heading-base);
